--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,8 @@ section{
   overflow: hidden;
 }
 
+
+
 header{
  height: 100px;
  display: flex;
@@ -103,4 +105,23 @@ td{
   color: #fff;
   font-weight: 600;
   font-size: 18px;
+}
+
+@media screen and (max-width:800px) {
+  section{
+    width: 90%;
+  }
+  header{
+    font-size: 20px;
+    height: 70px;
+  }
+
+  th, td{
+    font-size: 16px;
+  }
+  .dp{
+    font-size: 12px;
+    border-radius: 50%;
+    padding: 10px;
+  }
 }
